[package]
name = "PteroDactylCrasherByAlexsuper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crasher"
path = "src/main.rs"

[dependencies]
rand = "0.9.1"
wgpu = "25.0.2"
tokio = { version = "1.45.1", features = ["full"] }
reqwest = {version = "0.12.15", default-features = false, features = ["rustls-tls"]}
url = "2.5.4"